Bugfix Add Task subtasks overflow

--- a/styles/addtask.css
+++ b/styles/addtask.css
@@ -311,6 +311,7 @@ main {
   display: flex;
   flex-direction: column;
   gap: 8px;
+  overflow: scroll;
 }
 
 .subtasks input {
